[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/networking/RPCConnect.gd" type="Script" id=1]
[ext_resource path="res://assets/gameplay/floor.png" type="Texture" id=2]
[ext_resource path="res://addons/godot-rollback-netcode/NetworkRandomNumberGenerator.gd" type="Script" id=3]
[ext_resource path="res://scenes/debug/DebugOverlay.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/characters/MartialHero.tscn" type="PackedScene" id=5]

[sub_resource type="SGRectangleShape2D" id=1]
extents_x = 63963136
extents_y = 2359296

[node name="RpcGame" type="Node2D"]
script = ExtResource( 1 )

[node name="Messages" type="CanvasLayer" parent="."]

[node name="MessageLabel" type="Label" parent="Messages"]
anchor_right = 1.0
margin_bottom = 14.0
align = 1

[node name="ResetButton" type="Button" parent="Messages"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -20.0
text = "RESET"

[node name="SyncLostLabel" type="Label" parent="Messages"]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -106.0
margin_bottom = 14.0
text = "Regaining sync..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerPlayer" parent="." instance=ExtResource( 5 )]
position = Vector2( 147, 319 )
fixed_position_x = 9633792
fixed_position_y = 20905984

[node name="ClientPlayer" parent="." instance=ExtResource( 5 )]
position = Vector2( 769, 319 )
fixed_position_x = 50397184
fixed_position_y = 20905984

[node name="Johnny" type="Node" parent="."]
script = ExtResource( 3 )

[node name="FloorStaticBody" type="SGStaticBody2D" parent="."]

[node name="FloorCollisionShape" type="SGCollisionShape2D" parent="FloorStaticBody"]
position = Vector2( 417, 442 )
fixed_position_x = 27328512
fixed_position_y = 28966912
shape = SubResource( 1 )

[node name="FloorSprite" type="Sprite" parent="FloorStaticBody"]
position = Vector2( 418.141, 441.906 )
scale = Vector2( 1.46998, 0.0621235 )
texture = ExtResource( 2 )

[node name="DebugOverlay" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="Messages/ResetButton" to="." method="_on_ResetButton_pressed"]
